SUBDIRS=src doc

EXTRA_DIST = \
	autogen.sh \
	install.iss pango.modules pango.aliases gdk-pixbuf.loaders \
	examples/button/* \
	examples/checkbox/* \
	examples/chooser/* \
	examples/combobox/* \
	examples/editor/* \
	examples/entry/* \
	examples/frame/* \
	examples/glade/* \
	examples/hbox/* \
	examples/list/* \
	examples/menubar/* \
	examples/miscellaneous/* \
	examples/notebook/* \
	examples/pixmap/* \
	examples/progressbar/* \
	examples/radiobutton/* \
	examples/table/* \
	examples/text/* \
	examples/tree/* \
	examples/vbox/*
