SUBDIRS=src doc data

EXTRA_DIST = \
	autogen.sh \
	install.iss pango.modules pango.aliases gdk-pixbuf.loaders \
	doc/reference/* \
	examples/button/* \
	examples/checkbox/* \
	examples/colorbutton/* \
	examples/combobox/* \
	examples/comboboxentry/* \
	examples/comboboxtext/* \
	examples/demoscene/* \
	examples/edit/* \
	examples/entry/* \
	examples/eventbox/* \
	examples/expander/* \
	examples/fontbutton/* \
	examples/frame/* \
	examples/glade/* \
	examples/hbox/* \
	examples/hscale/* \
	examples/hseparator/* \
	examples/list/* \
	examples/menu/* \
	examples/menubar/* \
	examples/menuitem/* \
	examples/menuitemseparator/* \
	examples/miscellaneous/* \
	examples/notebook/* \
	examples/pixmap/* \
	examples/pfeme/* \
	examples/pfontview/* \
	examples/playmusic/* \
	examples/progressbar/* \
	examples/radiobutton/* \
	examples/spinbutton/* \
	examples/statusbar/* \
	examples/table/* \
	examples/terminal/* \
	examples/text/* \
	examples/timer/* \
	examples/togglebutton/* \
	examples/tree/* \
	examples/vbox/* \
	examples/vscale/* \
	examples/vseparator/* \
	examples/window/*
